--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,9 @@
 \usepackage{ifthen}
 \usepackage{thmtools}
 \usepackage{cancel}
+\usepackage[backend=bibtex]{biblatex}
 
+\bibliography{references}
 
 \title{Notes on Social and Behavioral Networks}
 \author{Cristian Di Pietrantonio}
@@ -34,4 +36,5 @@
 
 \input{chapters/ch01-meme-flow}
   
+\printbibliography
 \end{document}
