K max cover finished. Submodular functions started.

--- a/main.tex
+++ b/main.tex
@@ -23,9 +23,9 @@
 
 \newtheorem{thm}{Theorem}
 \newtheorem{lem}{Lemma}
-
+\newtheorem{defn}{Definition}
 \renewcommand{\deg}[1]{\emph{deg(#1)}}
-\newcommand{\pr}[1]{\emph{Pr}\{#1\}}
+\newcommand{\pr}[1]{\emph{Pr}\left\{#1\right\}}
 \begin{document}
 
 \maketitle
@@ -35,6 +35,8 @@
 \tableofcontents
 
 \input{chapters/ch01-meme-flow}
-  
+\input{chapters/ch02-chernoff-bound}
+\input{chapters/ch03-submodular}
+
 \printbibliography
 \end{document}
