--- a/references.bib
+++ b/references.bib
@@ -11,3 +11,11 @@
 	journaltitle = {Knowledge Discovery and Data Mining},
 	year         = {2013},
 }
+
+@Article{chainletters,
+	author       = {Chierichetti and Kleinberg and Liben-Nowell},
+	title        = {Reconstructing Patterns of Information Diffusion
+	from Incomplete Observations},
+	journaltitle = {Advances in Neural Information Processing Systems},
+	year         = {2011},
+}
