Chapter on submodular functions added. To be done: page 13, Def3 implies def1. Base step of the proof is missing.

--- a/references.bib
+++ b/references.bib
@@ -19,3 +19,10 @@
 	journaltitle = {Advances in Neural Information Processing Systems},
 	year         = {2011},
 }
+
+@Article{nemhauser01,
+ author={Nemhauser and Wolsey and Fisher},
+ year = {1978},
+ title = {An analysis of approximations for maximizing submodular set functions},
+ journaltitle = {Mathematical Programming},
+}
