--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 
 \newtheorem{thm}{Theorem}
 \newtheorem{lem}{Lemma}
+\newtheorem{claim}{Claim}
 \newtheorem{defn}{Definition}
 \renewcommand{\deg}[1]{\emph{deg(#1)}}
 \newcommand{\pr}[1]{\emph{Pr}\left\{#1\right\}}
