preferential attachment model added. ONly formulas, still need to transcribe the comments

--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,6 @@
 \input{chapters/ch01-meme-flow}
 \input{chapters/ch02-chernoff-bound}
 \input{chapters/ch03-submodular}
-
+\input{chapters/ch04-random-graphs}
 \printbibliography
 \end{document}
