--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 \usepackage{ifthen}
 \usepackage{thmtools}
 \usepackage{cancel}
+\usepackage{mathtools}
+\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \usepackage[backend=bibtex]{biblatex}
 
 \bibliography{references}
@@ -23,10 +25,13 @@
 
 \newtheorem{thm}{Theorem}
 \newtheorem{lem}{Lemma}
+\newtheorem{obs}{Observation}
 \newtheorem{claim}{Claim}
 \newtheorem{defn}{Definition}
+
 \renewcommand{\deg}[1]{\emph{deg(#1)}}
 \newcommand{\pr}[1]{\emph{Pr}\left\{#1\right\}}
+\newcommand{\longrange}{\rightsquigarrow}
 \begin{document}
 
 \maketitle
