--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,8 @@
 \newtheorem{defn}{Definition}
 
 \renewcommand{\deg}[1]{\emph{deg(#1)}}
-\newcommand{\pr}[1]{\emph{Pr}\left\{#1\right\}}
+\newcommand{\E}[1]{E\left[#1\right]}
+\newcommand{\pr}[1]{\emph{Pr}\left\{#1\right\}} %probability
 \newcommand{\longrange}{\rightsquigarrow}
 \begin{document}
 
