Clustering chapter started.

--- a/main.tex
+++ b/main.tex
@@ -23,11 +23,11 @@
 \title{Notes on Social and Behavioral Networks}
 \author{Cristian Di Pietrantonio}
 
-\newtheorem{thm}{Theorem}
-\newtheorem{lem}{Lemma}
-\newtheorem{obs}{Observation}
-\newtheorem{claim}{Claim}
-\newtheorem{defn}{Definition}
+\newtheorem{thm}{Theorem}[chapter]
+\newtheorem{lem}{Lemma}[chapter]
+\newtheorem{obs}{Observation}[chapter]
+\newtheorem{claim}{Claim}[chapter]
+\newtheorem{defn}{Definition}[chapter]
 
 \renewcommand{\deg}{\textit{deg}}
 \newcommand{\indeg}{\textit{indeg}}
@@ -53,5 +53,6 @@
 \input{chapters/ch03-submodular}
 \input{chapters/ch04-random-graphs}
 \input{chapters/ch05-densest-subgraph}
+\input{chapters/ch06-clustering}
 \printbibliography
 \end{document}
