--- a/references.bib
+++ b/references.bib
@@ -26,3 +26,9 @@
  title = {An analysis of approximations for maximizing submodular set functions},
  journaltitle = {Mathematical Programming},
 }
+
+@book{desappralgo,
+	author = {David P. Williamson and David B. Shmoys},
+	title = {The Design of Approximation Algortihms},
+	url = {http://www.designofapproxalgs.com/}
+}
