Correlation clustering added. Still need to finish k-median

--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
 \newtheorem{obs}{Observation}[chapter]
 \newtheorem{claim}{Claim}[chapter]
 \newtheorem{defn}{Definition}[chapter]
+\newtheorem{cor}{Corollary}[chapter]
 
 \renewcommand{\deg}{\textit{deg}}
 \newcommand{\indeg}{\textit{indeg}}
