--- a/main.tex
+++ b/main.tex
@@ -55,5 +55,6 @@
 \input{chapters/ch04-random-graphs}
 \input{chapters/ch05-densest-subgraph}
 \input{chapters/ch06-clustering}
+\input{chapters/ch07-lsh}
 \printbibliography
 \end{document}
