Finished lsh, added chapter 8

--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 \usepackage{algorithm2e}
 \usepackage[hidelinks]{hyperref}
 \usepackage[utf8]{inputenc}
-\usepackage{amssymb}
+\usepackage{amssymb, amsmath}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amsthm}
@@ -56,5 +56,6 @@
 \input{chapters/ch05-densest-subgraph}
 \input{chapters/ch06-clustering}
 \input{chapters/ch07-lsh}
+\input{chapters/ch08-arthur}
 \printbibliography
 \end{document}
